Logo stretch fix + Happiness Program filter func

--- a/styles/Our-works.css
+++ b/styles/Our-works.css
@@ -35,6 +35,7 @@
 
 .selected-clients-logos-image img {
     position: relative !important;
+    height: auto !important;
     /* padding: 10px; */
 }
 
@@ -98,7 +99,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: auto;
+        /* height: auto; */
         padding: 10px;
     }
 
